--- a/Router-exemple/package.json
+++ b/Router-exemple/package.json
@@ -1,18 +1,22 @@
 {
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0"
   },
   "name": "aula06-03",
   "version": "1.0.0",
   "main": "index.js",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node-dev ./src",
+    "start": "ts-node ./src"
   },
   "keywords": [],
   "author": "",
