--- a/Router-exemple/tsconfig.json
+++ b/Router-exemple/tsconfig.json
@@ -3,6 +3,8 @@
     "target": "es2016",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     "module": "commonjs",                                /* Specify what module code is generated. */
     "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   },
 //   "include": [
 //     "src/**/*" //pega todas as pastas que estão dentro de app
